Proper displaying of checkouts data

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
                 <p class="option-text" id="admin-button" data-admin-open="false">Admin Sign-In</p>
             </div>
     
-            <div class="button bg-blue" onclick="window.location.assign('/checkouts.html');">
+            <div class="button bg-blue" onclick="window.location.assign('/checkouts.php');">
                 <p class="option-text">Checkouts</p>
             </div>
     
-            <div class="button bg-blue" onclick="window.location.assign('/loaners-list.html');">
+            <div class="button bg-blue" onclick="window.location.assign('/loaners-list.php');">
                 <p class="option-text">Loaners</p>
             </div>
         </div>
