--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Chromebook Checkout</title>
     <link rel="stylesheet" href="/stylesheets/compiled/main.css">
     <script type="text/javascript" src="/src/scripts/jquery/jquery-3.7.1.js"></script>
+    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
 </head>
 <body id="main">
 
@@ -29,12 +30,12 @@
                 <p class="option-text" id="admin-button" data-admin-open="false">Admin Sign-In</p>
             </div>
     
-            <div class="button bg-blue" onclick="window.location.assign('/checkouts.php');">
-                <p class="option-text">Checkouts</p>
+            <div class="button bg-blue" onclick="window.location.assign('/devices.php');">
+                <p class="option-text">Devices</p>
             </div>
     
-            <div class="button bg-blue" onclick="window.location.assign('/loaners-list.php');">
-                <p class="option-text">Loaners</p>
+            <div class="button bg-blue" onclick="window.location.assign('/device-issues.php');">
+                <p class="option-text">Device Issues</p>
             </div>
         </div>
 
