Started integrating Google signins for organization

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
             <div class="button bg-blue" onclick="window.location.assign('/device-issues.php');">
                 <p class="option-text">Device Issues</p>
             </div>
+    
+            <div class="button bg-green" onclick="window.location.assign('/new/device.php');">
+                <p class="option-text">Add Devices</p>
+            </div>
         </div>
 
         <!-- Admin select menu -->
